--- a/style/logSignUp.css
+++ b/style/logSignUp.css
@@ -4,6 +4,7 @@ body {
   background: #f5f7fa;
   font-family: "Poppins", sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
