--- a/style/home.css
+++ b/style/home.css
@@ -273,6 +273,16 @@ ul {
     margin-right: 8px;
 }
 
+.post .post-video {
+    width: 100%;
+    max-height: 700px;
+    border-radius: 8px;
+    margin-top: 10px;
+    outline: none;
+    object-fit: cover;
+}
+
+
 .suggestions-card h4, .trending-card h4 {
     margin-bottom: 15px;
     border-bottom: 1px solid var(--border-color);
@@ -305,6 +315,12 @@ ul {
     color: var(--text-secondary-color);
     line-height: 1.2;
 }
+
+.suggestion-item .text-kecil strong {
+    font-size: 14px;
+    display: inline-block;
+}
+
 
 .suggestion-item button {
     background: none;
