--- a/style/chatDark.css
+++ b/style/chatDark.css
@@ -1,20 +1,19 @@
 :root {
-    --bg-main: #ffffff;
-    --bg-secondary: #f2f2f2;
-    --bg-tertiary: #e6e6e6;
-    --bg-chat-other: #f0f0f0;
+    --bg-main: #000;
+    --bg-secondary: #1a1a1a;
+    --bg-tertiary: #0a0a0a;
+    --bg-chat-other: #262626;
     --bg-chat-self: #9333ea;
-    --border-color: #dcdcdc;
-    --font-color-main: #000000;
-    --font-color-secondary: #4d4d4d;
-    --font-color-muted: #999999;
-    --input-bg: #f9f9f9;
-    --input-border: #cccccc;
-    --hover-bg: #dddddd;
-    --icon-color: #606060;
+    --border-color: #262626;
+    --font-color-main: #fff;
+    --font-color-secondary: #a8a8a8;
+    --font-color-muted: #666;
+    --input-bg: #1c1c1c;
+    --input-border: #363636;
+    --hover-bg: #444;
+    --icon-color: #a8a8a8;
     --font-family-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
-
 
 * {
     margin: 0;
@@ -434,7 +433,7 @@ body, html {
   .ig-main {
     flex: 1;
     height: 100%;
-    padding-bottom: 60px;
+    padding-bottom: 60px; 
   }
 
   .chat-header {
