--- a/style/story.css
+++ b/style/story.css
@@ -23,11 +23,14 @@
             align-items: center;
             cursor: pointer;
             z-index: 200;
-            /* Paling atas */
-            font-size: 24px;
+            font-size: 25px;
             color: #fff;
             line-height: 1;
             transition: background-color 0.2s;
+        }
+
+        .exit-button a{
+            text-decoration: none;
         }
 
         .exit-button:hover {
